# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
brain_games/: brain_games.py.save  cli.py  even_game.py  game_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
