[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A simple educational console game project"
authors = ["v-for-vinney"]
repository = "https://github.com/V-for-Vinney/python-project-lvl1"
packages = [
  { include = "brain_games" },
]

classifiers = [
	'Development Status :: 4 - Beta',
	'Environment :: Console',
	'Intended Audience :: End Users/Desktop',
	'License :: OSI Approved :: Python Software Foundation License',
	'Operating System :: MacOS :: MacOS X',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: POSIX',
	'Programming Language :: Python',
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

